--- a/training/package.json
+++ b/training/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6"
   }
