--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "debug.javascript.warnOnLongPrediction": false,
-    "css.validate": false
+  "debug.javascript.warnOnLongPrediction": true,
+  "css.validate": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
 }
